apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'application'
apply plugin: 'com.gorylenko.gradle-git-properties'

group = 'com.ncc.neon'

repositories {
    mavenCentral()
}

springBoot {
    buildInfo()
}

application {
    mainClassName = "com.ncc.neon.NeonServerApplication"
}

jar {
    enabled = true
}

bootJar {
    enabled = true
    classifier = 'boot'
}

dependencies {
    compile project(':common')
    serverAdapters.split(',').each {
        compile project(':' + it)
    }
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-webflux')
    implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml')
    runtimeOnly('org.springframework.boot:spring-boot-devtools')
    compileOnly('org.projectlombok:lombok')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation('io.projectreactor:reactor-test')
}

task unpack(type: Copy) {
    dependsOn bootJar
    from(zipTree(tasks.bootJar.outputs.files.singleFile))
    into("build/dependency")
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

gitProperties {
    extProperty = 'gitProps'
}

generateGitProperties.outputs.upToDateWhen { false }

task saveBuildDateAndGitCommit(dependsOn: 'generateGitProperties') {
    doLast {
        new File(projectDir, "src/main/resources/autogenerate.properties").text = "Build Date = " + new Date() + 
            "\nGit Commit = " + project.ext.gitProps['git.commit.id'] + "\n"
    }
}

bootRun.dependsOn saveBuildDateAndGitCommit
bootRun.mustRunAfter saveBuildDateAndGitCommit
build.dependsOn saveBuildDateAndGitCommit
test.dependsOn saveBuildDateAndGitCommit
